# Object-file readers/writers — ELF, Mach-O, PE, plus DWARF debug
# info, byte streams, and symbol demangling.

n00b_objfile_src = files(
    'bstream.c',
    'writer.c',
    'abstract.c',
    'md5.c',
    'demangle.c',
    'demangle_rust.c',
    'elf.c',
    'elf_query.c',
    'elf_helpers.c',
    'elf_build.c',
    'macho.c',
    'macho_query.c',
    'macho_helpers.c',
    'macho_build.c',
    'pe.c',
    'pe_query.c',
    'pe_helpers.c',
    'pe_build.c',
    'dwarf.c',
    'dwarf_query.c',
    'dwarf_codegen.c',
    'dwarf_build.c',
)
